# euroleague-stats-ai

./: .cursorignore  .cursorrules  .gitattributes  .gitignore  CLEANUP_FRONTEND_DATABASE_SUMMARY.md  DEPLOYMENT_GUIDE.md  FIX_MCP_CACHE.md  MCP_SETUP_INSTRUCTIONS.md  README.md  RENDER_QUICKSTART.md  ROADMAP.md  SETUP_STATUS.md  deployment-guide.md  package-lock.json  package.json  render-quickstart.md  render.yaml
backend/: .coverage  .env.example  CHAT_ENDPOINT_SETUP.md  DEPLOYMENT_RENDER.md  PLAYER_STATS_ARCHITECTURE.md  README.md  chat-endpoint-setup.md  diagnose_top_scorer.py  etl-readme.md  pyproject.toml  run_mcp.py  test_chat_endpoint.py  test_mcp_json.py  test_query_direct.py  test_regex.py  test_text_to_sql.py  verify_sql_fix.py
backend/app/: config.py  database.py  main.py  mcp_server.py
backend/etl/: API_STATUS.md  README.md  __init__.py  euroleague_client.py  ingest_boxscores.py  ingest_games.py  ingest_games.py.recovered  ingest_player_season_stats.py  ingest_player_stats.py  ingest_players.py  ingest_teams.py
backend/migrations/: 001_create_tables.sql  001_initial_schema.sql  002_add_player_code.sql  002_add_schema_embeddings.sql  003_fix_players_player_code.sql  004_add_player_season_stats.sql  README.md
backend/scripts/: add_player_code_migration.py  check_player_stats.py  check_positions.py  check_teams.py  clean_players.py  clean_teams.py  create_tables.py  debug_schema.py  diagnose_query.py  execute_migrations.py  fix_games_schema.py  fix_teams_table.py  init_db.py  init_embeddings.py  init_schema_embeddings.py  populate_test_data.py  run_etl.py  (+8 more)
(+151 files in other folders)
