[tool.poetry]
name = "euroleague-ai-backend"
version = "0.1.0"
description = ""
authors = ["Miguel Zaragoza Serrano <mzaragozaserrano@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.121.3,<0.122.0"
uvicorn = {extras = ["standard"], version = ">=0.38.0,<0.39.0"}
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.44,<3.0.0"}
asyncpg = ">=0.30.0,<0.31.0"
python-dotenv = ">=1.2.1,<2.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"
openai = ">=2.8.1,<3.0.0"
langchain = ">=1.0.8,<2.0.0"
langchain-openai = ">=1.0.3,<2.0.0"
pgvector = ">=0.4.1,<0.5.0"
slowapi = ">=0.1.9,<0.2.0"
python-multipart = ">=0.0.20,<0.0.21"
mcp = ">=0.1.0,<1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.1,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
pytest-bdd = ">=8.1.0,<9.0.0"
httpx = ">=0.28.1,<0.29.0"
ruff = ">=0.14.6,<0.15.0"
black = ">=25.11.0,<26.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]